# woe_credit_scoring

./: .gitignore  AutoCS.ipynb  CHANGELOG.md  CreditScoringToolkit.py  README.md  Usage Example.ipynb  WeightOfEvidenceScoring.py  deploy_platypy.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test.ipynb  tests.ipynb  train.csv  valid.csv
CreditScoringToolkit/: CreditScoring.py  DiscreteNormalizer.py  Discretizer.py  WoeBaseFeatureSelector.py  WoeContinuousFeatureSelector.py  WoeDiscreteFeatureSelector.py  WoeEncoder.py  __init__.py  frequency_table.py
docs/: CreditScoringToolkit.rst  REPORT.md  REPORT_v3.md  Usage_Example.ipynb  conf.py  modules.rst
graphify-out/: .graphify_analysis.json  .graphify_labels.json  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-15/: .graphify_analysis.json  .graphify_semantic_marker  cost.json  graph.json  manifest.json
graphify-out/cache/: stat-index.json
tests/: conftest.py
tests/integration/: test_autocreditscoring_pipeline.py  test_manual_pipeline.py
tests/unit/: test_base_selector.py  test_credit_scoring.py  test_discretizer.py  test_encoder.py  test_encoder_edge.py  test_feature_selectors.py  test_iv_calculator.py  test_normalizer.py  test_normalizer_edge.py  test_reporter.py
woe_credit_scoring/: CreditScoringToolkit.py  __init__.py  autocreditscoring.py  base.py  binning.py  discretizer.py  eda.py  encoder.py  export_html.py  feature_selectors.py  iv_calculator.py  mcp_server.py  models.py  normalizer.py  plots.py  reporter.py  scoring.py  validation.py
